# streamsculptor

./: .gitignore  GenerateImpactParams.py  InterpAGAMA.py  JaxCoords.py  LICENSE  README.md  StreamSculptor.py  debug.ipynb  fields.py  perturbative.py  potential.py  pyproject.toml  requirements.txt  setup.py  stream.py  tnfw_implement.py
.ipynb_checkpoints/: debug-checkpoint.ipynb
data/LMC_MW_potential/: MW_motion_dict.npy
examples/: OrphanChenab_mw_lmc_example.ipynb  StreamSubhaloExample.ipynb  custom_potential.ipynb  mw_lmc.ipynb  mw_lmc_setup.ipynb  tests.ipynb
streamsculptor/: GenerateImpactParams.py  InterpAGAMA.py  JaxCoords.py  RestrictedNbody.py  RestrictedNbody_dev.py  __init__.py  bfe.py  fields.py  generate_derivs.py  generate_derivs_jitted.py  interpolation.py  main.py  perturbative.py  perturbedstream.py  potential.py  sidm.py  streamframes.py  streamhelpers.py  subhalostatistics.py  tnfw.py  tnfw_analytic.py
streamsculptor.egg-info/: PKG-INFO  SOURCES.txt
streamsculptor/data/GD1_prog/: GD1_progenitor.npy
streamsculptor/examples/: GD1_and_SubhaloFitting_GPU.ipynb  OrphanChenab_mw_lmc_example.ipynb  StreamSubhaloExample.ipynb  bfe_example.ipynb  custom_potential.ipynb  dynamical_friction_ CustomField.ipynb  dynamical_friction_ CustomTerm.ipynb  higher_order_variationalEqn.ipynb  integrate_orbit_batch.ipynb  linear_perturbation_stream.ipynb  many_subhalos.ipynb  many_subhalos_tnfw.ipynb  mw_lmc_setup.ipynb  potential_from_1D_Density.ipynb  rate_calculator.ipynb  tests.ipynb  tnfw_example.ipynb
tests/: test_tnfw_subhalo_line_potential.py
(+3 files in other folders)
